Added new headers in the merged file